# notification-service

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  RUN_TESTS.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
scripts/: run_local.sh  wait_for_services.sh
src/: __init__.py  config.py  database.py  main.py
src/api/: __init__.py  dependencies.py  routes.py
src/models/: __init__.py  orm.py  schemas.py
src/services/: __init__.py  notification.py  retry.py
src/services/providers/: __init__.py  base.py  email.py  sms.py  telegram.py
src/utils/: __init__.py  correlation.py  logger.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_full_flow.py
tests/integration/: test_api.py
tests/unit/: test_notification_service.py  test_providers.py  test_retry.py
